--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
     "rimraf": "^6.0.1",
+    "swagger-ui-express": "^5.0.1",
     "ws": "^8.18.1"
   },
   "scripts": {
@@ -23,6 +24,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.13.14",
+    "@types/swagger-ui-express": "^4.1.8",
     "@types/ws": "^8.18.1",
     "nodemon": "^3.1.9",
     "prisma": "^6.6.0",
@@ -31,4 +33,3 @@
     "typescript": "^5.8.2"
   }
 }
-
