--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "@prisma/client": "^6.6.0",
+    "@types/cors": "^2.8.19",
     "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
