feat: include microservices on docker compose and env file

--- a/.env.copy
+++ b/.env.copy
@@ -1,3 +1,7 @@
-PORT=3000
-DATABASE_URL="postgres://root:root@localhost:5432/root"
-SECRET_KEY="SECRET"
+PORT=
+DATABASE_URL=""
+SECRET_KEY=""
+
+WEBSOCKET_MICROSERVICE_URL=""
+
+AI_MICROSERVICE_URL=""
