--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,3 +44,14 @@ services:
       - "3001:3001"
     volumes:
       - ../ms-imersiva-websocket:/app
+
+  frontend-app:
+    build: ../imersiva-frontend
+    container_name: imersiva-frontend
+    command: ["npm", "run", "dev"]
+    ports:
+      - "5173:5173"
+    volumes:
+      - ../imersiva-frontend:/app
+      - /app/node_modules
+
